<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="error_pass">At least, the password should be 6 characters!</string>
    <string name="error_email">Invalid email address!</string>
    <string name="app">App</string>
    <string name="story">Story</string>
    <string name="register">Register</string>
    <string name="hint_register">Don\'t have an account yet? Register now!</string>
    <string name="app_icon">app icon</string>
    <string name="desc_ic_email">email icon section</string>
    <string name="desc_ic_pass">password icon section</string>
    <string name="background_login_bottom">background login bottom</string>
    <string name="name">Name</string>
    <string name="desc_name_ic">icon name input section</string>
    <string name="logout">Logout</string>
    <string name="error_regist">Ups, please check your data again!</string>
    <string name="succes_regist">User created, please login!</string>
    <string name="error_400">Email or password is invalid</string>
    <string name="error_401">Account not found</string>
    <string name="time_at">at</string>
    <string name="icon_logout">Logout icon</string>
    <string name="icon_back">Back icon</string>
    <string name="story_user_image">Story user image</string>
    <string name="desc_fab_add">Button to add new story</string>
    <string name="hint_story">Tell us your story here!</string>
    <string name="hint_upload">Upload</string>
    <string name="desc_story_image">The image of your story</string>
    <string name="quest_add_story">What is your story today?</string>
    <string name="hi">Hi,</string>
    <string name="desc_hi_image">Image which say hi to you</string>
    <string name="permission_denied">Permission not granted!</string>
    <string name="choose_img">Choose picture</string>
    <string name="empty_img">Please enter the image file first</string>
    <string name="up_success">Your story has been uploaded</string>
</resources>