<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    tools:context=".view.detailstory.DetailStoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:minHeight="50dp"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_bg_story_text"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:foregroundGravity="center"
                android:src="@drawable/ic_bg_story_text"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_app"
                android:contentDescription="@string/app_icon" />

            <TextView
                android:id="@+id/tv_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/story"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iv_bg_story_text"
                app:layout_constraintEnd_toEndOf="@+id/iv_bg_story_text"
                app:layout_constraintStart_toStartOf="@+id/iv_bg_story_text"
                app:layout_constraintTop_toTopOf="@+id/iv_bg_story_text"
                app:layout_constraintVertical_bias="0.465" />

            <TextView
                android:id="@+id/tv_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/app"
                android:textColor="@color/my_theme"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/iv_bg_story_text"
                app:layout_constraintStart_toEndOf="@+id/iv_bg_story_text"
                app:layout_constraintTop_toTopOf="@+id/iv_bg_story_text"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#79D6D1D1"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/iv_ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_marginStart="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/icon_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_dummy_photo_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        android:background="@color/teal_700" />
    <TextView
        android:id="@+id/tv_one_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_dummy_photo_profile"
        app:layout_constraintEnd_toEndOf="@+id/iv_dummy_photo_profile"
        app:layout_constraintStart_toStartOf="@+id/iv_dummy_photo_profile"
        app:layout_constraintTop_toTopOf="@+id/iv_dummy_photo_profile"
        app:layout_constraintVertical_bias="0.19"
        tools:text="L" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Name"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_dummy_photo_profile"
        app:layout_constraintTop_toTopOf="@+id/iv_dummy_photo_profile" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:fontFamily="sans-serif-light"
        tools:text="9 April 2002 pukul 14.00"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <ImageView
        android:id="@+id/iv_story"
        android:layout_width="370dp"
        android:layout_height="370dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/story_user_image" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Description"
        app:layout_constraintStart_toStartOf="@+id/iv_dummy_photo_profile"
        app:layout_constraintTop_toBottomOf="@+id/iv_dummy_photo_profile" />


</androidx.constraintlayout.widget.ConstraintLayout>